--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/compiler-sfc": "^3.0.2",
     "@vue/server-renderer": "^3.0.2",
     "express": "^4.17.1",
+    "sass": "^1.27.0",
     "vite": "^1.0.0-rc.8"
   }
 }
