--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "node dist/server/src/entry-server"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
+    "vant": "^3.0.0-beta.5",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.1"
   },
